--- a/css/qna.css
+++ b/css/qna.css
@@ -18,6 +18,7 @@
   display: block; /* 한 줄에 하나씩만 보여주기 */
   width: 80%;
   font-size: 16px;
+  color: black;
 }
 
 .answerList:hover, .answerList:focus {
